@@ -15,24 +15,24 @@
 * limitations under the License.
 *
 */
-#if 0
+
+#include <tsfile/common/algorithm.h>
 #include <tsfile/model/chunk_group.h>
 
 namespace iotdb::tsfile {
-std::byte ChunkGroup::delimiter() const { return _byte_delimiter; }
-chunk_group_footer ChunkGroup::footer() const { return _footer; }
-chunk_iterator ChunkGroup::begin() { return _chunks.begin(); }
-chunk_iterator ChunkGroup::end() { return _chunks.end(); }
-reverse_chunk_iterator ChunkGroup::rbegin() { return _chunks.rbegin(); }
-reverse_chunk_iterator ChunkGroup::rend() { return _chunks.rend(); }
-const_chunk_iterator ChunkGroup::cbegin() const { return _chunks.cbegin(); }
-const_chunk_iterator ChunkGroup::cend() const { return _chunks.cend(); }
-void ChunkGroup::add_chunk(iotdb::tsfile::chunk&& chunk) { _chunks.push_back(std::move(chunk)); }
-bool ChunkGroup::remove_chunk(const iotdb::tsfile::chunk& input) {
-    return true;
+iotdb::tsfile::common::Byte ChunkGroup::Delimiter() const { return byte_delimiter_; }
+ChunkGroupFooter ChunkGroup::Footer() const { return footer_; }
+ChunkGroup::iterator ChunkGroup::begin() { return chunks_.begin(); }
+ChunkGroup::iterator ChunkGroup::end() { return chunks_.end(); }
+ChunkGroup::reverse_iterator ChunkGroup::rbegin() { return chunks_.rbegin(); }
+ChunkGroup::reverse_iterator ChunkGroup::rend() { return chunks_.rend(); }
+ChunkGroup::const_iterator ChunkGroup::cbegin() const { return chunks_.cbegin(); }
+ChunkGroup::const_iterator ChunkGroup::cend() const { return chunks_.cend(); }
+void ChunkGroup::AddChunk(Chunk&& chunk) { chunks_.push_back(std::move(chunk)); }
+bool ChunkGroup::RemoveChunk(const Chunk& input) {
+    return iotdb::tsfile::common::RemoveUsingHash(chunks_, input);
 }
 
-const_reverse_chunk_iterator ChunkGroup::crbegin() const { return _chunks.crbegin(); }
-const_reverse_chunk_iterator ChunkGroup::crend() const { return _chunks.crend(); }
+ChunkGroup::const_reverse_iterator ChunkGroup::crbegin() const { return chunks_.crbegin(); }
+ChunkGroup::const_reverse_iterator ChunkGroup::crend() const { return chunks_.crend(); }
 }  // namespace iotdb::tsfile
-#endif
