@@ -1,4 +1,4 @@
-#if 0
+
 #include "catch2/catch.hpp"
 #include "tsfile/model/chunk_group.h"
 
@@ -18,6 +18,5 @@ SCENARIO("We can work correctly with a chunkgroup", "[model]") {
      }
     }
 }
-#endif
 
 
